Bug 355592 - IconItem does not support non-square icons
Summary: IconItem does not support non-square icons
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: components (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 347268 361634 362679 373346 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-19 14:18 UTC by garwol
Modified: 2017-03-01 18:14 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (2.94 MB, image/png)
2015-11-19 14:19 UTC, garwol
Details
screenshot (1.90 MB, image/png)
2015-12-16 10:40 UTC, garwol
Details
screenshot (175.81 KB, image/png)
2016-05-06 02:05 UTC, Kethen Chui
Details

Note You need to log in before you can comment on or make changes to this bug.
Description garwol 2015-11-19 14:18:11 UTC
When desktop layout is set to folder view and thumbnails are enabled preview images are always square, no matter what is original aspect ratio for previewed files, even text files looks streetched a little bit

Reproducible: Always

Steps to Reproduce:
1. set desktop layout to folder view
2. enable file previews
3. copy some images into desktop directory

Actual Results:  
icons are square

Expected Results:  
previews should keep the aspect ratio of original files
Comment 1 garwol 2015-11-19 14:19:50 UTC
Created attachment 95601 [details]
screenshot
Comment 2 Shiba 2015-12-13 23:50:25 UTC
Same for me
Comment 3 garwol 2015-12-16 10:40:39 UTC
Created attachment 96123 [details]
screenshot
Comment 4 garwol 2015-12-16 10:41:44 UTC
plasma 5.5.1 - icons still stretched
Comment 5 David Edmundson 2016-01-19 15:31:08 UTC
*** Bug 347268 has been marked as a duplicate of this bug. ***
Comment 6 Kai Uwe Broulik 2016-02-26 15:55:06 UTC
This is actually a bug in the Plasma IconItem that just assumes everything to be square although QIcon can also hold non-square icons such as the ones coming from the thumbnail generator.
Comment 7 John Choate 2016-03-08 23:58:52 UTC
Still seeing this in Plasma 5.5.95 :(
Comment 8 Eike Hein 2016-04-11 16:28:17 UTC
*** Bug 361634 has been marked as a duplicate of this bug. ***
Comment 9 Kethen Chui 2016-05-06 00:54:20 UTC
*** Bug 362679 has been marked as a duplicate of this bug. ***
Comment 10 Kethen Chui 2016-05-06 01:01:02 UTC
Problem exists in a fresh install of ubuntu 16.04
Plasma 5.5.5
Comment 11 Kethen Chui 2016-05-06 02:05:09 UTC
Created attachment 98801 [details]
screenshot
Comment 12 Marian Kyral 2016-07-22 07:56:58 UTC
Still not fixed in 5.7.2
My wife don't like it and this is bad :-(
Comment 13 Gerhard Dittes 2016-08-17 13:37:24 UTC
Hi, I can confirm that (buggy) behavior on Debian testing (currently plasma 5.6.5) -- icon previews are always scaled to squares (ignoring the actual aspect ratio of the particular items).  Regards, Gerhard
Comment 14 Mahendra Tallur 2016-10-07 12:22:14 UTC
Hi ! I can confirm this issue in Plasma 5.8, Framework 5.26 (KDE Neon image from October).
Comment 15 Kai Uwe Broulik 2016-12-28 12:28:47 UTC
*** Bug 373346 has been marked as a duplicate of this bug. ***
Comment 16 Kai Uwe Broulik 2017-01-05 14:15:43 UTC
Git commit d46a91ea57f19e33e6f3a08ec86084b7e11a8e1a by Kai Uwe Broulik.
Committed on 05/01/2017 at 14:15.
Pushed by broulik into branch 'master'.

[Icon Item] Support non-square icons

Differential Revision: https://phabricator.kde.org/D3892

M  +39   -0    autotests/iconitemtest.cpp
M  +1    -0    autotests/iconitemtest.h
M  +38   -12   src/declarativeimports/core/iconitem.cpp
M  +1    -0    src/declarativeimports/core/iconitem.h

https://commits.kde.org/plasma-framework/d46a91ea57f19e33e6f3a08ec86084b7e11a8e1a
Comment 17 garwol 2017-01-05 16:45:03 UTC
wow
Comment 18 Mahendra Tallur 2017-01-05 17:18:23 UTC
Thanks for the fix :-)
Comment 19 Gerhard Dittes 2017-03-01 18:14:34 UTC
Cool news, thanks!

Please, please consider applying this fix to Plasma 5.8 (LTS), too! Please! :-)