[Icon Item] Support non-square icons

BUG: 355592

Differential Revision: https://phabricator.kde.org/D3892