src/declarativeimports/core/iconitem.h
@@ -176,6 +176,7 @@ private Q_SLOTS:
 
 private:
     void loadPixmap();
+    QSize paintedSize(const QSizeF &containerSize = QSizeF()) const;
 
     //all the ways we can set an source. Only one of them will be valid
     QIcon m_icon;
